# haw-modul-anerkennung

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.tex  CLAUDE_preprocessed.md  README.md  agents.md
.claude/skills/airtable/: SKILL.md
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
data/referenz/rechtsgrundlagen/: 40 Hamburgisches Hochschulgesetz.docx
data/referenz/workflow-beispiele/: Nachverfolgung.xlsx  Prozessschema Anerkennungen.xlsx
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  wrangler.toml
frontend/public/: site.webmanifest
frontend/src/app/: HomePage.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: ExternalModuleCard.tsx  StudiengangFilter.tsx
frontend/src/lib/: admin-service.ts  matching-service.ts  (+1 more)
matching-api/: .env.example  Dockerfile  admin_routes.py  app.py  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  run.sh  schema.sql
matching-api/data/vectorstore/: airtable_cache.json  chroma.sqlite3
matching-api/matching/: __init__.py  airtable.py  airtable_legacy.py  assistant.py  auth.py  chromadb.py  database.py  models.py
matching-api/scripts/: extract_pdf_to_json.py  import_json_to_neondb.py  load_units.py  migrate_airtable_to_neondb.py  migrate_varchar_limits.py  parse_m9_m18_to_db.py
matching-api/tests/: __init__.py  conftest.py  test_admin_routes.py  test_auth.py  test_database.py
scripts/: extract_modules_docling.py  extract_modules_docling_ma.py  extract_modules_from_pdf.py  import_to_airtable.py  sync_modules_to_airtable.py
(+19 files in other folders)
